# 19.20

./: CMakeLists.txt  README.md  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/tasks/: auto_fill.h  fill_matrix.h  game_life.h  generate_numbers.h  get_binary_tree.h  get_domains.h  get_submatrix.h  median_filter.h  numbers_less_than_n.c  portions_of_lines.c  rearrange_string.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vectorVoid/: vectorVoid.c  vectorVoid.h
