add_library(data_structures
        bitset/bitset.c
        unordered_array_set/unordered_array_set.h
        unordered_array_set/unordered_array_set.c
        ordered_array_set/ordered_array_set.c
        ordered_array_set/ordered_array_set.h
        vector/vector.h
        vector/vector.c
        vectorVoid/vectorVoid.h
        vectorVoid/vectorVoid.c
        matrix/matrix.h
        matrix/matrix.c
        string/string_.c
        string/string_.h
)